# video-publisher

./: .gitignore  Cargo.toml  app.txt
.github/workflows/: release.yml
src/: bot.rs  insta.rs  main.rs  process.rs  rutube.rs  telegram.rs  transform.rs  upload.rs  vk.rs  youtube.rs
