[package]
name = "video-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["full", "macros"] }
reqwest = { version = "0.12", features = ["blocking", "multipart","json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
indicatif = "0.17"
futures-util = "0.3"
regex = "1.11.1"
